/*
 * $Id: ChangeLog,v 1.1504 2003/09/23 21:23:51 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-24 03:18 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/bin/!pack_src.sh
  * xharbour/config/rules.cf
  * xharbour/config/linux/gcc.cf
    * fixed compilation for Linux

  * xharbour/contrib/libct/files.c
    ! fixed bug in FILEDELETE

  * xharbour/include/hbapi.h
  * xharbour/include/hbsetup.h
    * #define HB_ARRAY_USE_COUNTER moved to hbsetup.h
      I think it's easier to control when all such definition in one place

2003-09-23 17:30 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  + contrib/htmllib/include
  + contrib/libct/include
    * move all local include files here
  * contrib/libct/tab.c
    * add casts on char 141
  * contrib/htmllib/Makefile
  + contrib/htmllib/make_b32.bat
  * contrib/htmllib/make_vc.bat
  * contrib/htmllib/makefile.bc
  * contrib/htmllib/makefile.vc
  - contrib/htmllib/htmllib.bc
  + contrib/internet/make_vc.bat
  + contrib/internet/makefile.vc
  * contrib/libct/Makefile
  * contrib/libct/makefile.bc
  * contrib/libct/makefile.vc
  * contrib/libct/make_b32.bat
  * contrib/libct/make_vc.bat
  * contrib/libmisc/makefile.bc
  * contrib/libmisc/makefile.vc
  * contrib/libmisc/make_b32.bat
  * contrib/libmisc/make_vc.bat
  * contrib/rdd_ads/makefile.vc
  * contrib/tip/makefile.bc
  * contrib/tip/makefile.vc
  * contrib/tip/make_b32.bat
  * contrib/tip/make_vc.bat
  * contrib/what32/makefile.bc
  * contrib/what32/makefile.nt
  * contrib/what32/makefile.vc
  * contrib/what32/make_b32.bat
  * contrib/what32/make_vc.bat
  * contrib/whoo/makefile.nt
  * contrib/whoo/makefile.vc
  * contrib/whoo/make_b32.bat
  * contrib/whoo/make_vc.bat
  * contrib/woopgui/makefile.nt
  * contrib/woopgui/makefile.vc
  * contrib/woopgui/make_b32.bat
  * contrib/woopgui/make_vc.bat