@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1504 2003/09/23 21:23:51 paultucker Exp $
+ * $Id: ChangeLog,v 1.1505 2003/09/24 01:20:32 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-09-23 21:39 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/estack.c
+    ! Fixed GPF trap when resizing the stack, and hb_arrayResetHolder() might call hb_procinfo() before HB_VM_STACK.pBase was reset.
 
 2003-09-24 03:18 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
   * xharbour/bin/!pack_src.sh
@@ -73,7 +77,7 @@
   * makallvc.bat
   + makallbc.bat
     * These last 2 will build all .exe, .dll and .libs
-  
+
   * further tweaking is probably required for other platforms)
 
 2003-09-23 17:16 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
